[package]
name = "ruoidcprovider"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
derive_more = "0.99.14"
futures-util = "0.3.15"
futures = "0.3.15"
clap = "3.0.0-beta.5"
failure = "0.1.8"
openidconnect = "2.1.2"
actix-web = "3.3.3"
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"
